Added group by hour/day graphs

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,9 @@
 <body>
 
 <figure class="highcharts-figure">
-    <div id="container"></div>
+    <div id="log-chart"></div>
+	<div id="hour-chart"></div>
+	<div id="day-chart"></div>
 
 	<pre class="highcharts-description"><b>Raw log file content</b></pre>
     <pre class="highcharts-description" id='raw-content'>Not loaded</pre>
